--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
   "name": "@medistream/editorjs-text-color-plugin",
-  "version": "1.13.1",
+  "version": "1.14.0",
   "description": "Text Color Tool for Editor.js",
   "main": "./dist/bundle.js",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/flaming-cl/editorjs-text-color-plugin.git"
-  },
+  "repository": "https://github.com/medistream-team/editorjs-text-color-plugin",
   "keywords": [
     "['editor'",
     "'editorjs'",
     "'text color picker']"
   ],
-  "author": "flaming-cl",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/flaming-cl/editorjs-text-color-plugin/issues"
+  "author": {
+    "name": "medistream.team",
+    "email": "medistream.team@gmail.com"
   },
-  "homepage": "https://github.com/flaming-cl/editorjs-text-color-plugin#readme",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "raw-loader": "^4.0.1",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   }
 }
